--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "body-parser": "^1.20.3",
     "cheerio": "^1.0.0",
     "child_process": "^1.0.2",
+    "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
     "dns": "^0.2.2",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "fhy-wabot": "^1.0.11",
     "fs": "^0.0.1-security",
     "gtts": "^0.2.1",
     "https": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "net": "^1.0.2",
     "path": "^0.12.7",
     "puppeteer": "^23.6.1",
